# cv_c-

./: CMakeLists.txt  README.md
include/: Test.hpp  img_operator.hpp
install/: local_setup.sh  setup.sh
install/my_interfaces/include/my_interfaces/my_interfaces/msg/: position.h  position.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/my_interfaces/share/my_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_interfaces/share/my_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_my_interfaces__rosidl_generator_cExport.cmake  export_my_interfaces__rosidl_generator_pyExport.cmake  export_my_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  my_interfacesConfig-version.cmake  my_interfacesConfig.cmake  my_interfaces__rosidl_typesupport_cExport.cmake  my_interfaces__rosidl_typesupport_cppExport.cmake  my_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/my_interfaces/share/my_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/my_interfaces/share/my_interfaces/msg/: Position.idl  Position.msg
install/objective_track/lib/objective_track/: objective_track
install/objective_track/share/objective_track/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/objective_track/share/objective_track/cmake/: objective_trackConfig-version.cmake  objective_trackConfig.cmake
install/objective_track/share/objective_track/environment/: ament_prefix_path.dsv  path.dsv
install/show_position/lib/show_position/: show_position
install/show_position/share/show_position/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/show_position/share/show_position/cmake/: show_positionConfig-version.cmake  show_positionConfig.cmake
install/show_position/share/show_position/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build  latest_list
src/: main.cpp
src/mouse_click/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mouse_click.cpp
src/my_interfaces/: CMakeLists.txt  package.xml
src/objective_track/: CMakeLists.txt
src/objective_track/config/: K_Matrix.txt  objective_world_pose.txt  yellow.txt
src/objective_track/include/objective_track/: Pose_calculator.hpp  my_common.hpp  objective_track.hpp
src/objective_track/src/: Pose_calculator.cpp  main.cpp  objective_track.cpp
src/reference/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  reference_2.cpp
src/save_photos/: CMakeCache.txt  CMakeLists.txt  Makefile  a.x  cmake_install.cmake  save_photo.cpp
src/show_position/: CMakeLists.txt
src/show_position/src/: show_position.cpp
(+28 files in other folders)
